changed footer to header

--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <footer>
+    <header>
         <img class="logo" src="https://content.codecademy.com/courses/freelance-1/unit-4/img-tea-cozy-logo.png?_gl=1*ijvqvi*_ga*MzM4MDYwMTUyLjE2NTA3Mzc4ODM.*_ga_3LRZM6TM9L*MTY2MTQwMzU3Ni4yNDEuMS4xNjYxNDAzOTg3LjE5LjAuMA.." alt="Tea Cozy logo">
         <ul>
             <li><a href="#mission">Mission</a></li>
             <li><a href="#featured">Featured Tea</a></li>
             <li><a href="#locations">Locations</a></li>
         </ul>
-    </footer>
+    </header>
     <main>
         <div id="mission">
             <div>
